[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://src/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/ScoreCounter.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 1024, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
mob_scene = ExtResource( 3 )

[node name="player" parent="." instance=ExtResource( 2 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 512, 512 )

[node name="mobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="startTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="ScoreCounter" parent="." instance=ExtResource( 5 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="hit" from="player" to="." method="game_over"]
[connection signal="timeout" from="mobTimer" to="." method="_on_mobTimer_timeout"]
[connection signal="timeout" from="startTimer" to="." method="_on_startTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="Timer" to="." method="_score_counter"]
